--- a/topeducation/templates/category/companies/update.html
+++ b/topeducation/templates/category/companies/update.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} Editar Empresa {% endblock %}
-{% block header %} Editar Empresa: <p class="text-[20px] font-normal">{{ form.nombre.value }}</p> {% endblock %}
+{% block header %} Editar Empresa: <p class="text-[12px] mt-[-5px] font-normal">{{ form.nombre.value }}</p> {% endblock %}
 
 {% block content %}
 {% include 'category/companies/form.html' %}
