--- a/topeducation/templates/category/companies/form.html
+++ b/topeducation/templates/category/companies/form.html
@@ -1,9 +1,9 @@
 <form enctype="multipart/form-data" method="POST">
   {% csrf_token %}
-  <div class="mt-3 grid grid-cols-4 gap-x-6 gap-y-4 cont-form">
+  <div class="mt-2 grid grid-cols-1 md:grid-cols-4 gap-x-6 cont-form bg-neutral-700 rounded-2xl p-4 md:p-8 max-w-7xl m-auto">
 
     <!-- Primera columna: ocupa 1/3 -->
-    <div class="col-span-3 grid grid-cols-2 gap-4">
+    <div class="col-span-3 grid grid-cols-1 md:grid-cols-2 gap-3">
       {% for field in form %}
         {% if field.name == "nombre" or field.name == "empr_img" or field.name == "empr_ico" %}
           <div class="{% if field.name == 'contenido_certificacion' or field.name == 'modulos_certificacion' %}col-span-full{% endif %}">
@@ -31,7 +31,7 @@
     </div>
 
     <!-- Segunda columna: ocupa 2/3 -->
-    <div class="col-span-1 grid grid-cols-1 gap-4">
+    <div class="col-span-1 grid grid-cols-1 gap-4 md:pl-3 md:border-l md:border-neutral-600">
         <div>
       {% for field in form %}
         {% if field.name != "nombre" and field.name != "empr_img" and field.name != "empr_ico" %}
@@ -61,14 +61,16 @@
           </div>
         {% endif %}
       {% endfor %}
+          <div class="flex gap-3 w-full mt-8">
+            <input class="bg-[#F6F4EF] transition duration-300  hover:text-shadow-[0_35px_35px_rgb(255_255_255_/_0.25)] !text-[#1c1c1c] font-bold py-1 px-4 rounded-full" value="Actualizar" type="submit" />
+            <a class="bg-neutral-400 hover:bg-neutral-400 text-neutral-950 font-bold py-2 px-4 rounded-full" href="{% url 'companies' %}">Cancelar</a>
+          </div>
         </div>
     </div>
+     
   </div>
 
-  <div class="flex gap-3 w-full mt-8">
-    <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg" value="Actualizar" type="submit" />
-    <a class="bg-neutral-500 hover:bg-neutral-400 text-neutral-950 font-bold py-2 px-4 rounded-lg" href="{% url 'companies' %}">Cancelar</a>
-  </div>
+ 
 </form>
 
 
