--- a/topeducation/templates/category/index.html
+++ b/topeducation/templates/category/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %} 
-    <div class="grid grid-cols-4 gap-4 h-50mt-6">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 h-50mt-6">
         <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 border border-neutral-500">
             <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
