--- a/topeducation/templates/pages/dashboard.html
+++ b/topeducation/templates/pages/dashboard.html
@@ -5,17 +5,17 @@
 
 {% block content %}
 <div class="w-12/12">
-    <div class="flex flex-row">
-        <div class="bg-no-repeat bg-neutral-700 border border-neutral-500 rounded-xl w-7/12 mr-2 p-6" style="background-image: url(https://previews.dropbox.com/p/thumb/AAvyFru8elv-S19NMGkQcztLLpDd6Y6VVVMqKhwISfNEpqV59iR5sJaPD4VTrz8ExV7WU9ryYPIUW8Gk2JmEm03OLBE2zAeQ3i7sjFx80O-7skVlsmlm0qRT0n7z9t07jU_E9KafA9l4rz68MsaZPazbDKBdcvEEEQPPc3TmZDsIhes1U-Z0YsH0uc2RSqEb0b83A1GNRo86e-8TbEoNqyX0gxBG-14Tawn0sZWLo5Iv96X-x10kVauME-Mc9HGS5G4h_26P2oHhiZ3SEgj6jW0KlEnsh2H_yTego0grbhdcN1Yjd_rLpyHUt5XhXHJwoqyJ_ylwvZD9-dRLgi_fM_7j/p.png?fv_content=true&size_mode=5); background-position: 90% center;">
+    <div class="flex flex-col md:flex-row gap-3">
+        <div class="bg-no-repeat bg-neutral-700 border border-neutral-500 rounded-xl w-12/12 md:w-7/12 mr-2 p-6" style="background-image: url(https://previews.dropbox.com/p/thumb/AAvyFru8elv-S19NMGkQcztLLpDd6Y6VVVMqKhwISfNEpqV59iR5sJaPD4VTrz8ExV7WU9ryYPIUW8Gk2JmEm03OLBE2zAeQ3i7sjFx80O-7skVlsmlm0qRT0n7z9t07jU_E9KafA9l4rz68MsaZPazbDKBdcvEEEQPPc3TmZDsIhes1U-Z0YsH0uc2RSqEb0b83A1GNRo86e-8TbEoNqyX0gxBG-14Tawn0sZWLo5Iv96X-x10kVauME-Mc9HGS5G4h_26P2oHhiZ3SEgj6jW0KlEnsh2H_yTego0grbhdcN1Yjd_rLpyHUt5XhXHJwoqyJ_ylwvZD9-dRLgi_fM_7j/p.png?fv_content=true&size_mode=5); background-position: 90% center;">
           <p class="text-5xl text-white">Bienvenido a <br><strong>Top.Education</strong></p>
-          <span class="bg-neutral-700 text-xl text-white inline-block rounded-full mt-8 px-8 py-2"><strong id="reloj"></strong></span>
+          <span class="bg-neutral-500 text-xl text-white inline-block rounded-full mt-8 px-8 py-2"><strong id="reloj"></strong></span>
         </div>
 
-        <div class="bg-no-repeat bg-blue-950 border border-blue-800 rounded-xl w-5/12 ml-2 p-6">
+        <div class="bg-no-repeat bg-blue-950 border border-blue-800 rounded-xl w-12/12 md:w-5/12 p-6">
             <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
-                        <p class="mb-0 font-sans font-semibold leading-normal text-3xl text-white">Total de certificaciones</p>
+                        <p class="mb-0 font-sans font-semibold leading-normal text-[24px] md:text-3xl text-white">Total de certificaciones</p>
                         <h5 class="mb-0 font-bold text-9xl text-white">
                         {{ certifications|length }} 
                         </h5>
@@ -30,8 +30,8 @@
             </div>
         </div>
       </div>
-      <div class="flex flex-row h-35 gap-2 mt-6">
-        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-3/12 border border-neutral-500">
+      <div class="flex flex-col md:flex-row md:h-35 gap-2 mt-6">
+        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-12/12 md:w-3/12 border border-neutral-500">
             <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-3/12 border border-neutral-500">
+        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-12/12 md:w-3/12 border border-neutral-500">
           <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-3/12 border border-neutral-500">
+        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-12/12 md:w-3/12 border border-neutral-500">
             <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-3/12 border border-neutral-500">
+        <div class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-12/12 md:w-3/12 border border-neutral-500">
             <div class="flex flex-row -mx-3">
                 <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <canvas class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-6/12 mt-5 border border-neutral-500" id="myChart"></canvas>
+    <canvas class="bg-neutral-700 rounded-xl shadow-lg px-6 py-4 w-6/12 md:w-6/12 mt-5 border border-neutral-500" id="myChart"></canvas>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
